--- a/strnum.html
+++ b/strnum.html
@@ -2,7 +2,7 @@
 <html lang="kor">
 <head>
   <meta charset="UTF-8">
-  <title>Practice String and Number</title>
+  <title>Practice String and Number!</title>
 </head>
 <body>
   <script src="strnum.js"></script>
